--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-Hello PhoneGap!
-</head>    
+<script src="phonegap.js"></script>
+</head>  
+<body>
+This is an updated app that we gonna roll with.
+</body>
 </html>
