--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
 <script src="phonegap.js"></script>
 </head>  
 <body>
-This is an updated app that we gonna roll with.
+Hello PhoneGap!!!
 </body>
 </html>
