--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-<script src="phonegap.js"></script>
 </head>  
 <body>
-Hello PhoneGap!!!
+<p>hello michael</p>
 </body>
 </html>
