--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
 <head>
 </head>  
 <body>
-<div style='border:5px solid red'>hello michael</div>
+<div style='border:5px solid red;width:200px;'>hello michael</div>
 </body>
 </html>
